# fpl-performer

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  fpl_data_fetcher.py  pyproject.toml  requirements.txt  xfpl_calculator.py
