[project]
name = "fpl-performer"
version = "0.1.0"
description = "FPL Over/Underperformance Analyzer - Compare actual FPL points to expected points (xFPL)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "polars>=0.20.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]
